# public/swagger.json
@@ -808,7 +808,32 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
-		"/alumno/{nombre}": {
+		"/alumno": {
+			"get": {
+				"operationId": "GetAlumnos",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/TblAlumno"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"TblAlumno"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/alumno/{username}": {
 			"get": {
 				"operationId": "GetAlumnoByUsername",
 				"responses": {
@@ -835,7 +860,7 @@
 				"parameters": [
 					{
 						"in": "path",
-						"name": "nombre",
+						"name": "username",
 						"required": true,
 						"schema": {
 							"type": "string"
